# CMake_QT_16_static_QML_Tester

./: .gitignore  版本特性.txt
skins/: rcc_build.py
skins/skin1/: CheckBox_Standard.qml  CheckBox_Standard_Test.qml  Rectangle_Standard.qml  TabBar_Standard.qml  TabBar_Standard_Test.qml  TabButton_Standard.qml  TextEdit_Standard.qml  TextEdit_Standard_Test.qml  desktop.ini  qrc_build.py  qtquickcontrols2.conf  skin.qrc
skins/skin2/: Button_Standard.qml  Button_Standard_Test.qml  CheckBox_Standard.qml  CheckBox_Standard_Test.qml  Config.qml  Item_Standard.qml  Label_Standard.qml  Label_Standard_Test.qml  Material_demo.qml  Pane_Standard.qml  Pane_Standard_Test.qml  Rectangle_Standard.qml  Rectangle_Standard_Test.qml  TextField_Standard.qml  TextField_Standard_Test.qml  desktop.ini  skin.qrc
skins/skin3/: Button_Standard.qml  Button_Standard_Test.qml  Config.qml  Item_Standard.qml  Pane_Standard_Test.qml  Rectangle_Standard.qml  TextEdit_Standard_Test.qml  Text_Standard_Test.qml  Universal_demo.qml  qrc_build.py  qtquickcontrols2.conf  skin.qrc
skins/skin4/: Button_Standard.qml  CheckBox_Standard.qml  CheckBox_Standard_Test.qml  Label_Standard.qml  Label_Standard_Test.qml  Pane_Standard.qml  Rectangle_Standard_Test.qml  TextEdit_Standard.qml  TextField_Standard.qml  TextField_Standard_Test.qml  Text_Standard.qml  desktop.ini  qtquickcontrols2.conf  rcc_build.py  skin.qrc
src/: Animation_Flickable_test.qml  Animation_ParallelAnimation_demo.qml  Animation_PropertyAnimation_demo.qml  Animation_RotationAnimation_demo.qml  Animation_ScaleAnimation_demo.qml  Animation_test1.qml  ApplicationWindow.qml  BasicType.qml  Behavior_demo.qml  BusyIndicator_Style.qml  Busyindicator_Test.qml  Button_Standard.qml  Button_Standard_Test.qml  CMakeLists.txt  ChartView_demo.qml  ChartView_test1.qml  CheckBox_demo.qml  ColorAnimation_demo.qml  ComboBox_demo.qml  Config.qml  Config_Test.qml  Connections_demo.qml  Connections_demo2_customized_signal.qml  Connections_demo2_customized_signal_Test.qml  Container_demo.qml  Coordinate.qml  Dialog_Standard.qml  Dialog_Standard_Test.qml  Dialog_demo.qml  DogWatchIndicator _Test.qml  DogWatchIndicator.qml  EngineReloader.cpp  EngineReloader.h  EngineReloaderWrapper.cpp  EngineReloaderWrapper.h  Flickable_GridLayout.qml  Flickable_GridLayout_Test.qml  Flickable_demo.qml  FolderListmodel_demo.qml  GlobalVariant.h  (+100 more)
